Fix overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   border-top: var(--win-border);
+  overflow: hidden;
 }
 
 #TextEditor > div.body div.splitpanes {
